Fix bug recommendation overlap in mobile

--- a/css/maps.css
+++ b/css/maps.css
@@ -275,7 +275,6 @@ html, body {
 
 .offcanvas-end {
   width: 240px !important;
-  /* background-color: #125C78;  */
   background-color: hsl(212, 42%, 20%);
   color: white;
 }
@@ -594,7 +593,17 @@ footer .p-3 {
     margin: 0;
     border-radius: 0;
     order: -1;
+    z-index: 1;
   }
+
+  .navbar{
+    z-index: 2;
+  }
+
+  .offcanvas-backdrop {
+    background-color: #000;
+}
+
   #map {
     width: 90%;
     height: 200px;
